--- a/css/estilo.css
+++ b/css/estilo.css
@@ -75,16 +75,22 @@ header{
 }
 
 figure{
-	padding: 10px;
+	padding: 20px;
 	width: 100%;
 	background: url('/img/dog-00.jpg') 0px 0px/850px;
 	text-align: center;
-	color: #009cff;
 	font-weight: bold;
 	font-size: 1.2rem;
 }
 
 figure figcaption{ margin-bottom: 10px; }
+
+figure figcaption h2, .servicos h4{
+	font-weight: bold;
+	font-size: 2.5rem;
+	margin-bottom: 15px;
+	color: #009cff;
+}
 
 figure .buttons{
 	display: flex;
@@ -93,7 +99,67 @@ figure .buttons{
 	align-items: center;
 }
 
-figure .buttons button{ 
+figure .buttons button{
+	border: solid 1px black;
+	border-radius: 10px;
+	color: #fff;
+	background-color: #009cff;
+	display: flex;
+    width: 100%;
+	height: 50px;
+    margin-bottom: 10px;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+	font-size: 1.8rem;
+	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', sans-serif;
+}
+
+figure .buttons button span{ margin-left: 10px; }
+
+figure .buttons .btn-sobre{
+	color: #000;
+	background-color: #bed9e8;
+}
+
+.servicos{
+	width: 90%;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	text-align: center;
+	padding: 20px;
+	background-color: #82a5b8;
+	color: #fff;
+	margin-top: 15px;
+	border-radius: 10px;
+}
+
+.servicos img{
+	width: 250px;
+	height: 150px;
+	margin-bottom: 20px;
+}
+
+footer{
+	margin-top: 15px;
+	background-color: #596c7a;
 	width: 100%;
-	margin-bottom: 10px; 
+	padding: 3% 4%;
+}
+
+footer .social-icones{
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+@media(min-width: 568px){
+	.logo{
+		border-radius: 0;
+		width: 203px;
+    	background: url(../img/logo_large.jpg) center center/163px no-repeat;
+	}
 }
