--- a/css/estilo.css
+++ b/css/estilo.css
@@ -74,6 +74,29 @@ header{
 	color:#d1d1d1d1;
 }
 
+.menu-nav-lg{
+	display: none;
+	margin-top: 30px; 
+}
+
+.menu-nav-lg nav ul{ display: flex; }
+
+.menu-nav-lg nav ul li{ margin-right: 20px; }
+
+.menu-nav-lg nav ul li a{
+	background-color: #596c7a;
+	padding: 10px;
+	border-radius: 15px;
+	color: #fff;
+	text-decoration: none;
+	transition: all 0.2s ease-in;
+}
+
+.menu-nav-lg nav ul li a:hover{
+	cursor: pointer;
+	background-color: #3c4952;
+}
+
 figure{
 	padding: 20px;
 	width: 100%;
@@ -113,6 +136,7 @@ figure .buttons button{
     align-items: center;
 	font-size: 1.8rem;
 	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', sans-serif;
+	transition: all 0.2s ease-in;
 }
 
 figure .buttons button span{ margin-left: 10px; }
@@ -120,6 +144,16 @@ figure .buttons button span{ margin-left: 10px; }
 figure .buttons .btn-sobre{
 	color: #000;
 	background-color: #bed9e8;
+}
+
+.btn-cadastrar:hover{
+	background-color: rgb(0 117 191);
+	cursor: pointer;
+}
+
+figure .buttons .btn-sobre:hover{
+	background-color: #95acb9;
+	cursor: pointer;
 }
 
 .servicos{
@@ -161,5 +195,44 @@ footer .social-icones{
 		border-radius: 0;
 		width: 203px;
     	background: url(../img/logo_large.jpg) center center/163px no-repeat;
+	}
+
+	.menu ul{
+		display: grid; 
+		grid-template-columns: 200px 200px 200px;
+	}
+
+	figure .buttons{ flex-direction: row; }
+
+	figure .buttons button{
+		width: 30%;
+		margin-left: 30px;
+	}
+}
+
+@media(min-width: 900px){
+	.btn-menu{ display: none; }
+
+	.menu-nav-lg{ display: block; }
+
+	figure{ 
+		background-repeat: no-repeat;
+    	background-position: center;
+	}
+
+	.servicos img{
+		width: 459px;
+    	height: 263px;
+	}
+
+	main{
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	.servicos{
+		margin: 17px;
+		width: 40%;
 	}
 }
